Fixed number align

--- a/app/assets/stylesheets/custom.css.less
+++ b/app/assets/stylesheets/custom.css.less
@@ -300,8 +300,8 @@ font-size: 22px;
   top: 53px;
   .text{
     position: absolute;
-    top: 18px;
-    left: 27px;
+    top: 14px;
+    left: 30px;
     font-size: 50px;
     color: white;
   }
